# core_equity_factors

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  lecture7.html  lecture7.md  pyproject.toml  summary.html  summary.qmd  summary.tex
core_equity_factors/: README.md
core_equity_factors/docs/: example.ipynb
core_equity_factors/src/core_equity_factors/: __init__.py
docs/: Makefile  conf.py  example.ipynb  make.bat
src/: main.ipynb
src/core_equity_factors/: core_equity_factors.py
tests/: test_core_equity_factors.py
