[tool.poetry]
name = "core_equity_factors"
version = "0.0.0"
description = "Econometrics project M2 203"
authors = ["Faune Blanchard"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
